2004-04-27  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Basque (eu) to ALL_LINGUAS.

2004-04-26  Morten Welinder  <terra@gnome.org>

	* src/yelp-window.c (window_handle_page): Fix the rest of #140595.

	* src/yelp-db-pager.c (db_pager_process): Free path, free walker,
	and free the transformed document.  (#140630)

2004-04-24  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Georgian (ka) to ALL_LINGUAS.

2004-04-19  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Fixed leak in window_handle_pager_uri, #140597  (Morten Welinder)
	- Fixed leak in window_handle_page, #140595  (Morten Welinder)

2004-04-19  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-io-channel.c:
	- #include <stdio.h>, as per #134886

2004-04-19  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Fix leak with gtk_tree_store_set, #140546  (Morten Welinder)

2004-04-19  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-theme.c:
	- Don't g_object_ref after gtk_style_new, #140525  (Morten Welinder)

2004-04-19  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- s/g_free/g_strfreev/ on **paths, fixes #140524 (Morten Welinder)

2004-04-16  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- NULL check on priv->pager before g_object_unref, fixes #140300

2004-04-16  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- Better handling of category_hash, as per #128914

2004-04-10  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.

2004-03-31  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "af" to ALL_LINGUAS.

2004-03-22  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	- Version 2.6.0

	* po/*.po:
	- Stuff distcheck likes to do

2004-03-22  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "pa" (Punjabi) to ALL_LINGUAS.

2004-03-21  Shaun McCance  <shaunm@gnome.org>

	* configure.in: